



########### install files ###############

install( FILES objects.kvtml worldcapitals.kvtml computers.kvtml animals.kvtml sports.kvtml people.kvtml inventions.kvtml currencies.kvtml fruits.kvtml vegetables.kvtml space.kvtml professions.kvtml clothing.kvtml transportation.kvtml numbers.kvtml  DESTINATION  ${DATA_INSTALL_DIR}/kanagram/data/en )




#original Makefile.am contents follow:

#txt_DATA = objects.kvtml worldcapitals.kvtml computers.kvtml animals.kvtml sports.kvtml people.kvtml inventions.kvtml currencies.kvtml fruits.kvtml vegetables.kvtml space.kvtml professions.kvtml clothing.kvtml transportation.kvtml numbers.kvtml
#txtdir = $(kde_datadir)/kanagram/data/en
