
install( FILES objects.kvtml worldcapitals.kvtml computers.kvtml animals.kvtml sports.kvtml people.kvtml inventions.kvtml currencies.kvtml fruits.kvtml vegetables.kvtml space.kvtml professions.kvtml clothing.kvtml transportation.kvtml numbers.kvtml  DESTINATION  ${DATA_INSTALL_DIR}/kanagram/data/en )

add_subdirectory( es )

